# Backtrader_first

./: Readme.txt  last.py  pyproject.toml
work/: 1_Base_days.py  2_Base_days_save.py  3_Show_graph.py  4_multy_days.py  Desc.txt
