[tool.poetry]
name = "bt-f-t"
version = "0"
description = ""
authors = ["66910 <669101mac@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
backtrader = "^1.9.78.123"
requests = "^2.32.3"
tabulate = "^0.9.0"
psycopg2 = "^2.9.9"
pandas = "^2.2.2"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
